Enable multi-threaded testing.
Upgrade to maven-surefire-plugin-2.16.