@@ -25,11 +25,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.15</version>
+        <version>2.16</version>
         <configuration>
           <includes>
             <include>net/hydromatic/optiq/test/OptiqSuite.java</include>
           </includes>
+          <threadCount>8</threadCount>
+          <parallel>methods</parallel>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
       <plugin>
